media: Destroy ContextProvider on the right thread.

Make sure to retain a ref to the ContextProvider so that it gets
destroyed on the thread it is bound on.

BUG=898842

Change-Id: Iefcab772acb4cf530ff4a3e7c64e9b66e35b3f4e
Reviewed-on: https://chromium-review.googlesource.com/c/1304068
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603547}
Former-commit-id: 444889cd11ff48021e904a75bed7d81f2a29405c